Updated name in submission

--- a/static/realanalysis/Introduction/whyrncnqandzn/whyrncnqandzn.html
+++ b/static/realanalysis/Introduction/whyrncnqandzn/whyrncnqandzn.html
@@ -66,3 +66,13 @@
 <li><p>Tao, Terence. (2006). <em>Analysis 1</em></p></li>
 <li><p>http://www.welchlabs.com/resources/freebook</p></li>
 </ol>
+
+
+<br />
+<i>
+Name: Padmapriya Mohan<br />
+Mentor:<br />
+Verified by:<br />
+GitHub Link:<br /></i>
+<br />
+<i>The following notes and their corrosponding animations was created by the above-mentioned contributor under the FOSSEE Animations Internship.</p></i>
