--- a/static/realanalysis/Functions of Several Variable/higherorderderivatives/higherorderderivatives.html
+++ b/static/realanalysis/Functions of Several Variable/higherorderderivatives/higherorderderivatives.html
@@ -39,14 +39,14 @@ Partial derivatives of second order like $\frac {\partial^2 z}{{\partial x}{\par
 We know that a derivative of a function is the tangent drawn to the function at that point. In the similar way a second order derivative is a tangent drawn to to first order derivative at that point. 
 As higher order derivatives are also functions they can also be plotted on the cartesian plane. Here is an example of the function $f(x) = x^3$ , it's first order derivative and  it's second order derivative. 
 
-<video src="1.mp4" width="100%" controls  >
+<video src="1.mp4" poster="1.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
  
 As we get partial derivatives from multivariate function they are usually plotted in the 3d space .As partial derivatives will also be function of several variables they can be plotted in the 3d space. Partial derivatives in the 3d space look like planes as they are calculated assuming one variable to be constant. This can be understood with an example.
 This is the plot of a multivariate function $z =x^2y^2$ and it's first order partial derivatives $\frac {\partial z}{\partial x}$ at $y=1$ and  $\frac {\partial z}{\partial y}$ at $x=1$.
 
-<video src="2.mp4" width="100%" controls  >
+<video src="2.mp4" poster="2.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 		<h3>Pause and Ponder</h3>
