--- a/static/realanalysis/Functions of Several Variable/whatisfxy/whatisfxy.html
+++ b/static/realanalysis/Functions of Several Variable/whatisfxy/whatisfxy.html
@@ -20,7 +20,7 @@
 <h3 id="birds-eye-view">Bird’s Eye View</h3>
 <p>Multivariable functions can be understood as just regular functions the difference being that multivariate functions take more than one input or give more than one output. <br>
 
-<video src="1.mp4" width="100%" controls  >
+<video src="1.mp4" poster="1.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -29,7 +29,7 @@
 <h3 id="scalar-vs-vector-valued-functions">Scalar vs Vector Valued functions</h3>
 <p>To understand the difference between scalar and vector functions a firm grasp on the basics of what the concepts of scalars and vectors mean is very essential. Scalars are the quantities that have only a magnitude(i.e. value) associated with them where as vectors are defined by multiple scalars. Vectors are usually seen as quantities that have both a magnitude and a direction. For Example: <span class="math inline">\(2\)</span> and <span class="math inline">\(3\)</span> are scalars where as (<span class="math inline">\(2, 3\)</span>) is a vector, which is made up of two scalar quantities of <span class="math inline">\(2\)</span> and <span class="math inline">\(3\)</span></p>
 
-<video src="1.mp4" width="100%" controls  >
+<video src="2.mp4" poster="2.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -41,7 +41,7 @@ We generally deal with scalar functions in our day to day math. These are functi
 <p>Multivariate functions are plotted similarly to single variable functions but these are plotted on more dimensions than the single variable functions. For example a two variable scalar function <span class="math inline">\(f(x,y)\)</span> is plotted on a 3D space with the <span class="math inline">\(x,y,z\)</span> axes. For a scalar function of this form the inputs are plotted on the x and the y axis whereas the output is plotted on the z axis. Together this gives us a plot in the 3D space. The plots of scalar functions are surfaces on the three dimensional plane.</p>
 <p>Example of Scalar function plot:</p>
 
-<video src="4.mp4" width="100%" controls  >
+<video src="4.mp4" poster="4.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -50,7 +50,7 @@ We generally deal with scalar functions in our day to day math. These are functi
 <p>Vector functions also can be plotted in the same way as the scalar functions of more than one variable. When the input is considered in one axis and the two outputs are plotted on the other two axes. For example a vector function <span class="math inline">\(f(x)= [\sin x , \cos x]\)</span>. For a vector function of this form the outputs are plotted on the x and the y axis whereas the input is plotted on the z axis. Together this gives us a plot in the 3D space. Vector functions can be divided into parametric equations before plotting on the three dimensional surface.</p>
 <p>Example of Vector function plot:</p>
 
-<video src="3.mp4" width="100%" controls  >
+<video src="3.mp4" poster="3.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
