--- a/static/realanalysis/Introduction/whydoweneedrealnumbers/whydoweneedrealnumbers.html
+++ b/static/realanalysis/Introduction/whydoweneedrealnumbers/whydoweneedrealnumbers.html
@@ -33,7 +33,7 @@ What follows is a geometrical proof that demonstrates that $\sqrt{2}$ doesn't be
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<video src="animation1.mp4" width="100%" controls  >
+<video src="animation1.mp4" poster="1.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
     </video>
 </div>
@@ -61,7 +61,7 @@ What follows is a geometrical proof that demonstrates that $\sqrt{2}$ doesn't be
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<video src="animation2.mp4" width="100%" controls  >
+<video src="animation2.mp4" poster="2.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
     </video>
 </div>
@@ -108,7 +108,7 @@ What follows is a geometrical proof that demonstrates that $\sqrt{2}$ doesn't be
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<video src="animation3.mp4" width="100%" controls  >
+<video src="animation3.mp4" poster="3.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
     </video>
 </div>
