--- a/static/realanalysis/Introduction/whyrncnqandzn/whyrncnqandzn.html
+++ b/static/realanalysis/Introduction/whyrncnqandzn/whyrncnqandzn.html
@@ -22,7 +22,7 @@
 <li><p><span class="math inline">\(\mathbb{Q}\)</span> lacks the notion of a limit for a converging sequence. Hence, the reals <span class="math inline">\(\mathbb{R}\)</span> are the metric completion of the rationals <span class="math inline">\(\mathbb{Q}\)</span></p></li>
 <li><p><span class="math inline">\(\mathbb{R}\)</span> lacks solutions to several polynomial equations and functions. Hence, the complex numbers <span class="math inline">\(\mathbb{C}\)</span> are the algebraic completion of the reals <span class="math inline">\(\mathbb{R}\)</span>.</p></li>
 </ol>
-<video src="Sub2Animation1.mp4" width="100%" controls  >
+<video src="Sub2Animation1.mp4" poster="1.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -32,7 +32,7 @@
 <h2 id="context-of-the-definition">Context of the definition</h2>
 <p>The Fundamental Theorem of Algebra states that the number of roots a quadratic equation is determined by the degree of the polynomial. Consider the polynomial <span class="math inline">\(x^{2} + 1\)</span>. According to the theorem, our polynomial must have two roots, i.e. when graphed, it must cut the x-axis at 2 points. Upon examining its plot, we observe that surprisingly, the curve doesn’t cut the x axis at all! It would be absurd to conclude that our quadratic has no solution; the Fundamental Theorem of Algebra affirms that there are 2 values of x that when plugged into <span class="math inline">\(x^{2} + 1\)</span> give us 0. Clearly, we’re missing something. It so happens that in this case, we’re missing certain numbers. And not merely a bunch of them, rather, an entire dimension of them!</p>
 
-<video src="Sub2Animation2.mp4" width="100%" controls  >
+<video src="Sub2Animation2.mp4" poster="2.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -41,7 +41,7 @@
 <h2 id="negative-attitude-towards-negative-numbers">Negative attitude towards Negative Numbers</h2>
 <p>The statement &quot;10 pens from 5&quot; appears to be a logical fallacy. How is it possible possess 5 pens lesser than nothing?! We know today that this statement is equivalent to &quot;5 - 10&quot;, and when we look at it in a purely mathematical sense, it doesn’t seem as ridiculous anymore. This clarity was absent in the past, when negative numbers were viewed as bizarre. Our skepticism of imaginary numbers is no different from the suspicion with which the negatives were once regarded. Negative numbers may just as well be a special case of the imaginary numbers. Take a look at the following animation:</p>
 
-<video src="Sub2Animation4.mp4" width="100%" controls  >
+<video src="Sub2Animation4.mp4" poster="3.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
@@ -50,7 +50,7 @@
 <p>The states + and - are not binary, rather they are a continuum. You get from one state to the other by a 180 degree rotation, and i is nothing but rotational operator that allows for a 90 degree rotation. We could employ this rotational transformation to map to any complex number we wanted.</p>
 
 
-<video src="Sub2Animation5.mp4" width="100%" controls  >
+<video src="Sub2Animation5.mp4" poster="5.png" width="100%" controls  >
       Your browser does not support the <code>video</code> element.
 </video>
 
